# TuringMachine

./: .gitignore  CMakeLists.txt  README.md  machine.csv  machine.h
src/: machine.cpp  main.cpp  parser.cpp  parser.h
